# Aide

./: LICENSE  README.md  index.html  package.json
aide/: .env  README.md  package-lock.json  tsconfig.app.json  tsconfig.node.json
aide/src/: App.tsx
aide/src-tauri/: Cargo.toml  tauri.conf.json
aide/src/components/: Mascot.tsx  ThemeSelector.css  ThemeSelector.tsx
aide/src/contexts/: ThemeContext.tsx
src/: App.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Mascot.css
