[package]
name = "aide"
version = "0.1.0"
description = "A local AI assistant"
authors = ["Mira"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "global-shortcut-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
window-vibrancy = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
